--- a/_includes/page.html
+++ b/_includes/page.html
@@ -6,10 +6,11 @@
 	</header>
 
 	<div class="post-content">
+		<div class="blurb">
 		<table cellspacing="3" cellpadding="10" width="100%"></table>
 		<tr>
 			<td class="centered">
-				<img src="/public/img/mypicture.JPG" width="170" height="180"></td>
+				<img src="/public/img/mypicture.JPG" width="170" height="200"></td>
 			<td>
 				<table style="width: 100%" cellpadding="2">
 						
@@ -42,6 +43,7 @@
 			</td>
 		</tr>
 	</table>
+</div>
 		{{ content }}
 	</div>
 </article>
