不能添加照片，因为使用的模版的限制

--- a/_includes/page.html
+++ b/_includes/page.html
@@ -4,6 +4,7 @@
 			{{ page.title | escape }}
 		</div>
 	</header>
+<!-- 	
 	<div class="blurb">
 		<table cellspacing="3" cellpadding="10" width="100%"></table>
 		<tr>
@@ -41,9 +42,9 @@
 			</td>
 		</tr>
 	</table>
-</div>
-	<div class="post-content">
+</div> -->
 
+	<div class="post-content">
 		{{ content }}
 	</div>
 </article>
